# C.L.A.A.R.

./: Cargo.toml
src/: framebuffer.rs  lib.rs  main.rs  primatives.rs
